Fix collapsing issue and change About me

--- a/src/css/ContactPage.css
+++ b/src/css/ContactPage.css
@@ -1,6 +1,6 @@
 .contact-background {
   background: url('../art-background.jpg') no-repeat center center fixed;
-  height: 100vh;
+  height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,7 +9,7 @@
 }
 
 .contact-wrapper {
-  height: 100vh;
+  height: auto;
 }
 
 .contact-section {
